--- a/approval-service/Dockerfile
+++ b/approval-service/Dockerfile
@@ -1,4 +1,29 @@
-#FROM ubuntu:latest
-#LABEL authors="andre"
-#
-#ENTRYPOINT ["top", "-b"]
+# ---------------
+# BUILD STAGE
+# ---------------
+
+FROM gradle:8-jdk23-alpine AS builder
+
+COPY --chown=gradle:gradle . /home/gradle/src
+
+WORKDIR /home/gradle/src
+
+RUN gradle build -x test
+
+# ---------------
+# PACKAGE STAGE
+# ---------------
+FROM openjdk:23-jdk
+
+RUN mkdir /app
+
+COPY --from=builder /home/gradle/src/build/libs/*.jar /app/approval-service.jar
+
+# Use environment variables for MongoDB credentials or PostgreSQL credentials if needed
+#ENV MONGO_DB_USERNAME=admin \
+#    MONGO_DB_PWD=password \
+#    SPRING_DATA_MONGODB_URI=mongodb://${MONGO_DB_USERNAME}:${MONGO_DB_PWD}@mongo:27017/approvaldb
+
+EXPOSE 8089
+
+ENTRYPOINT ["java", "-jar", "/app/approval-service.jar"]
