--- a/room-service/src/main/resources/application.properties
+++ b/room-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=room-service
+
+server.port=8085
+
+#Postgres-local-config
+spring.datasource.url=jdbc:postgresql://localhost:5433/order-service
+
+#Postgres-config
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgresSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
+
+spring.jpa.hibernate.ddl-auto=none
