application-docker.properties and application.properties are set

--- a/user-service/src/main/resources/application-docker-users.properties
+++ b/user-service/src/main/resources/application-docker-users.properties
@@ -1,11 +1,11 @@
-spring.application.name=room-service
+spring.application.name=user-service
 
-server.port=5442
+server.port=5443
 
-#Postgres-local-config
-spring.datasource.url=jdbc:postgresql://localhost:5433/order-service
+#Postgres local configuration
+spring.datasource.url=jdbc:postgresql://localhost:5443/user-service
 
-#Postgres-config
+#Postgres configuration
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
