--- a/booking-service/src/main/resources/application-docker-booking.properties
+++ b/booking-service/src/main/resources/application-docker-booking.properties
@@ -4,7 +4,7 @@ server.port=8085
 
 # mongodb database properties
 # if error change to this spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27019
 spring.data.mongodb.database=booking-service
 spring.data.mongodb.username=admin
