--- a/event-service/src/main/resources/application-docker-event.properties
+++ b/event-service/src/main/resources/application-docker-event.properties
@@ -1,12 +1,13 @@
-spring.application.name=booking-service
+spring.application.name=event-service
+
 # tomcat port for product-service
-server.port=8085
+server.port=8086
 
 # mongodb database properties
 # if error change to this spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27019
-spring.data.mongodb.database=booking-service
+spring.data.mongodb.database=event-service
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
