--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=user-service
+
+server.port=5443
+
+#Postgres local configuration
+spring.datasource.url=jdbc:postgresql://localhost:5443/user-service
+
+#Postgres configuration
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgresSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
+
+spring.jpa.hibernate.ddl-auto=none
+
+#inventory.service.url=http://localhost:
