Approval-service could work I need to check tests

--- a/approval-service/src/main/resources/application-docker-approval.properties
+++ b/approval-service/src/main/resources/application-docker-approval.properties
@@ -4,7 +4,7 @@ server.port=8087
 
 # mongodb database properties
 # if error change to this spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27019
 spring.data.mongodb.database=approval-service
 spring.data.mongodb.username=admin
