--- a/booking-service/Dockerfile
+++ b/booking-service/Dockerfile
@@ -19,11 +19,9 @@ RUN mkdir /app
 
 COPY --from=builder /home/gradle/src/build/libs/*.jar /app/booking-service.jar
 
-# Use environment variables for MongoDB credentials
-#ENV MONGO_DB_USERNAME=admin \
-#    MONGO_DB_PWD=password \
-#    SPRING_DATA_MONGODB_URI=mongodb://${MONGO_DB_USERNAME}:${MONGO_DB_PWD}@<MONGODB_HOST>:<MONGODB_PORT>/<DATABASE_NAME>
+ENV MONGO_DB_USERNAME=admin \
+    MONGO_DB_PWD=password
 
-EXPOSE 8086
+EXPOSE 8085
 
 ENTRYPOINT ["java", "-jar", "/app/booking-service.jar"]
