--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
 
-#inventory.service.url=http://localhost:
+user.service.url=http://localhost:5443
