--- a/approval-service/src/main/resources/application-docker-approval.properties
+++ b/approval-service/src/main/resources/application-docker-approval.properties
@@ -3,10 +3,11 @@ spring.application.name=approval-service
 server.port=8087
 
 # mongodb database properties
-# if error change to this spring.data.mongodb.port=27017
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27019
 spring.data.mongodb.database=approval-service
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
+
+approval.service.url=http://approval-service:8087
