--- a/approval-service/src/main/resources/application.properties
+++ b/approval-service/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.data.mongodb.database=approval-service
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
+
+approval.service.url=http://localhost:8087
