--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,53 @@
-#version: '4.0'
-
+# docker-compose -p microservices-assignment -f docker-compose.yml up -d
 services:
 
-# POSTGRES SQL COMPOSE FILE / SQL
+  # PostgreSQL for Room Service
   postgres-room-service:
-    image: postgres
+    image: postgres:latest
     ports:
       - "5442:5432"
     container_name: postgres-room-service
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=password
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password
     volumes:
-      - ./data/room-service:/var/lib/postgresql/data
       - ./init/room-service/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - spring
 
+  # PostgreSQL for User Service
   postgres-user-service:
-    image: postgres
+    image: postgres:latest
     ports:
       - "5443:5432"
     container_name: postgres-user-service
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=password
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password
     volumes:
-      - ./data/user-service:/var/lib/postgresql/data
       - ./init/user-service/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - spring
 
+  # pgAdmin for PostgreSQL Management
   pgadmin:
-    image: dpage/pgadmin4
+    image: dpage/pgadmin4:latest
     ports:
       - "8888:80"
     container_name: pgadmin-single
     environment:
-      - PGADMIN_DEFAULT_EMAIL=a1@gmail.com
-      - PGADMIN_DEFAULT_PASSWORD=password
-
-# MONGO DB COMPOSE FILES / NOSQL
+      PGADMIN_DEFAULT_EMAIL: a1@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: password
+    networks:
+      - spring
 
   # Booking Service
   booking-service:
-    image: booking-service
-    ports:
-      - "8085:8085"
     build:
       context: ./booking-service
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
+    ports:
+      - "8085:8085"
     container_name: booking-service
     environment:
       SPRING_PROFILES_ACTIVE: docker
@@ -56,12 +58,11 @@ services:
 
   # Event Service
   event-service:
-    image: event-service
-    ports:
-      - "8086:8086"
     build:
       context: ./event-service
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
+    ports:
+      - "8086:8086"
     container_name: event-service
     environment:
       SPRING_PROFILES_ACTIVE: docker
@@ -72,12 +73,11 @@ services:
 
   # Approval Service
   approval-service:
-    image: approval-service
-    ports:
-      - "8087:8087"
     build:
       context: ./approval-service
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
+    ports:
+      - "8087:8087"
     container_name: approval-service
     environment:
       SPRING_PROFILES_ACTIVE: docker
@@ -86,7 +86,7 @@ services:
     networks:
       - spring
 
-  # MongoDB Service
+  # MongoDB for NoSQL Services
   mongodb:
     image: mongo:latest
     ports:
@@ -95,27 +95,25 @@ services:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
-        - ./data/mongo:/data/db
-        - ./init/mongo/docker-entrypoint-initdb.d/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+      - ./init/mongo/docker-entrypoint-initdb.d/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
     networks:
-        - spring
+      - spring
 
-  # Mongo Express
+  # Mongo Express for MongoDB Management
   mongo-express:
-    image: mongo-express
+    image: mongo-express:latest
     ports:
       - "8083:8081"
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=password
-      - ME_CONFIG_MONGODB_SERVER=mongodb
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+      ME_CONFIG_MONGODB_SERVER: mongodb
     container_name: mongo-express
     depends_on:
       - mongodb
     networks:
       - spring
 
-# Optional volumes
 volumes:
   mongo-db:
     driver: local
