--- a/event-service/src/main/resources/application-docker-event.properties
+++ b/event-service/src/main/resources/application-docker-event.properties
@@ -4,10 +4,11 @@ spring.application.name=event-service
 server.port=8086
 
 # mongodb database properties
-# if error change to this spring.data.mongodb.port=27017
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27019
 spring.data.mongodb.database=event-service
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
+
+event.service.url=http://event-service:8086
