--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.data.mongodb.database=product-service
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
+
+event.service.url=http://event-serivce:8086
