--- a/room-service/src/main/resources/application-docker-rooms.properties
+++ b/room-service/src/main/resources/application-docker-rooms.properties
@@ -13,3 +13,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgresSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
+
+room.service.url=http://room-serivce:5442
