--- a/user-service/src/main/resources/application-docker-users.properties
+++ b/user-service/src/main/resources/application-docker-users.properties
@@ -13,3 +13,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgresSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
+
+user.service.url=http://user-service:5443
