--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,4 +3,24 @@ logging.level.org.springframework.security=DEBUG
 
 server.port=9001
 
+service.user-url="http://localhost:5443"
+service.event-url="http://localhost:8086"
+service.room-url="http://localhost:5442"
+service.booking-url="http://localhost:8085"
+service.approval-url="http://localhost:8087"
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:9090/realms/spring-microservices-security-realm
+
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
+
+springdoc.swagger-ui.urls[0].name=User Service
+springdoc.swagger-ui.urls[0].url=/aggregate/user-service/v3/api-docs
+springdoc.swagger-ui.urls[1].name=Room Service
+springdoc.swagger-ui.urls[1].url=/aggregate/room-service/v3/api-docs
+springdoc.swagger-ui.urls[2].name=Event Service
+springdoc.swagger-ui.urls[2].url=/aggregate/event-service/v3/api-docs
+springdoc.swagger-ui.urls[3].name=Booking Service
+springdoc.swagger-ui.urls[3].url=/aggregate/booking-service/v3/api-docs
+springdoc.swagger-ui.urls[4].name=Approval Service
+springdoc.swagger-ui.urls[4].url=/aggregate/approval-service/v3/api-docs
