--- a/room-service/src/main/resources/application.properties
+++ b/room-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=room-service
+room-service-version=v1.0
 
 server.port=5442
 
@@ -14,4 +15,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
 
-room.service.url=http://localhost:5442
+
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
