--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -24,3 +24,23 @@ springdoc.swagger-ui.urls[3].name=Booking Service
 springdoc.swagger-ui.urls[3].url=/aggregate/booking-service/v3/api-docs
 springdoc.swagger-ui.urls[4].name=Approval Service
 springdoc.swagger-ui.urls[4].url=/aggregate/approval-service/v3/api-docs
+
+# Resilience4j
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.inventory.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.inventory.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+resilience4j.timelimiter.instances.inventory.timeout-duration=3s
+resilience4j.circuitbreaker.instances.inventory.minimum-number-of-calls=5
+
+resilience4j.retry.instances.inventory.max-attempts=3
+resilience4j.retry.instances.inventory.wait-duration=2s
