--- a/approval-service/src/main/resources/application.properties
+++ b/approval-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=approval-service
+approval-service-version=V1.0
 # tomcat port for product-service
 server.port=8087
 
@@ -11,4 +12,5 @@ spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
 
-approval.service.url=http://localhost:8087
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
