--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=booking-service
+booking-service-version=v1.0
 # tomcat port for product-service
 server.port=8085
 
@@ -11,4 +12,5 @@ spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
 
-booking.service.url=http://localhost:8085
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
