--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=event-service
+event-service-version=v1.0
 
 # tomcat port for product-service
 server.port=8086
@@ -6,9 +7,10 @@ server.port=8086
 # mongodb database properties
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27019
-spring.data.mongodb.database=product-service
+spring.data.mongodb.database=event-service
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
 
-event.service.url=http://event-serivce:8086
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
