--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=user-service
+user-service-version=v1.0
 
 server.port=5443
 
@@ -14,4 +15,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
 
-user.service.url=http://localhost:5443
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
