--- a/approval-service/src/main/resources/application.properties
+++ b/approval-service/src/main/resources/application.properties
@@ -12,5 +12,7 @@ spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
 
+approval.service.url="http://localhost:8087"
+
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
