--- a/room-service/src/main/resources/application.properties
+++ b/room-service/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
 
+room.service.url="http://localhost:5442"
 
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
