--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -15,5 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
 
+user.service.url=http://localhost:5443
+
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
