--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
 
-#booking.service.url=http://localhost:8085
+booking.service.url=http://localhost:8085
 
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
